--- a/src/index.css
+++ b/src/index.css
@@ -31,14 +31,21 @@ body {
 	min-height: 100vh;
 }
 
+#root {
+    margin: 2rem;
+    min-height: 100vh;
+    min-width: 250px;
+}
+
 h1 {
-	font-size: 3.2em;
+	font-size: 2em;
 	line-height: 1.1;
 }
 
 button {
 	border-radius: 8px;
 	border: 1px solid transparent;
+    margin: 1rem 0;
 	padding: 0.6em 1.2em;
 	font-size: 1em;
 	font-weight: 500;
@@ -53,6 +60,14 @@ button:hover {
 button:focus,
 button:focus-visible {
 	outline: 4px auto -webkit-focus-ring-color;
+}
+
+input {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 10px;
+    font-size: 16px;
+    width: calc(100% - 22px /* 2x padding + 2x border */);
 }
 
 ul {
